[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Sips <samipsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocfg = "1.0.0"
bitflags = "1.2.1"
bitmaps = "2.1.0"
bytecount = "0.6.0"
bytes = "0.5.6"
cc = "1.0.58"
crossbeam = "0.7.3"
dashmap = "4.0.0-rc6"
ferris-says = "0.2.0"
fixedbitset = "0.3.0"
generator = "0.6.21"
generic-array = "0.14.4"
h2 = "0.2.6"
hashbrown = "0.8.2"
http = "0.2.1"
hyper = "0.13.7"
im = "15.0.0"
indexmap = "1.5.1"
integer-sqrt = "0.1.3"
iovec = "0.1.4"
itertools = "0.9.0"
line_drawing = "0.8.0"
log = "0.4.11"
num = "0.3.0"
number_prefix = "0.4.0"
ordslice = "0.3.0"
pdqselect = "0.1.0"
petgraph = "0.5.1"
predicates = "1.0.5"
priority-queue = "1.0.0"
quote = "1.0.7"
rand = "0.7.3"
rand_chacha = "0.2.2"
rstar = "0.8.2"
sharded-slab = "0.0.9"
siphasher = "0.3.3"
sized-chunks = "0.6.2"
slab = "0.4.2"
sqlite = "0.25.3"
string = "0.2.1"
syn = "1.0.38"
twoway = "0.2.1"
url = "2.1.1"