[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Sips <samipsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned = "0.3.4"
alphanumeric-sort = "1.4.0"
ammonia = "3.1.0"
arrayvec = "0.5.1"
aspect = "0.2.0"
async-std = "1.6.3"
async-task = "3.0.0"
autocfg = "1.0.0"
autograph = "0.0.3"
awc = "1.0.1"
bimap = "0.5.2"
binary-heap-plus = "0.3.0"
bincode = "1.3.1"
bitflags = "1.2.1"
bitintr = "0.3.0"
bitmaps = "2.1.0"
bitvec = "0.17.4"
bytecount = "0.6.0"
bytes = "0.5.6"
cauchy = "0.3.0"
cc = "1.0.58"
crc32c = "0.5.0"
crossbeam = "0.7.3"
curl = "0.4.31"
dashmap = "3.11.10"
diffus = "0.9.1"
dissimilar = "1.0.2"
either = "1.6.0"
emu = "0.1.3"
encoding_rs = "0.8.23"
enumset = "1.0.1"
evmap = "10.0.2"
extprim = "1.7.1"
ferris-says = "0.2.0"
fixed = "1.1.0"
fixedbitset = "0.3.0"
flatbuffers = "0.6.1"
flo_stream = "0.4.0"
float_eq = "0.4.1"
futures = "0.3.5"
gcd = "2.0.1"
generational-arena = "0.2.8"
generator = "0.6.21"
generic-array = "0.14.4"
governor = "0.3.1"
grpc = "0.8.1"
h2 = "0.2.6"
hashbrown = "0.8.2"
hdrhistogram = "7.1.0"
headers = "0.3.2"
hibitset = "0.6.3"
http = "0.2.1"
http-body = "0.3.1"
httparse = "1.3.4"
hyper = "0.13.7"
hyperx = "1.0.0"
im = "15.0.0"
indexmap = "1.5.1"
input_buffer = "0.3.1"
integer-sqrt = "0.1.3"
iovec = "0.1.4"
is_sorted = "0.1.1"
itertools = "0.9.0"
jumphash = "0.1.6"
line_drawing = "0.8.0"
lockfree = "0.5.1"
log = "0.4.11"
loom = "0.3.5"
markup5ever = "0.10.0"
merkle-cbt = "0.2.2"
metered = "0.4.0"
metrohash = "1.0.6"
mio = "0.7.0"
muldiv = "0.2.1"
natural = "0.5.0"
nb = "1.0.0"
ndarray = "0.13.1"
ndarray-linalg = "0.12.1"
num = "0.3.0"
number_prefix = "0.4.0"
oorandom = "11.1.2"
ordermap = "0.4.2"
ordslice = "0.3.0"
pathfinding = "2.0.4"
pdqselect = "0.1.0"
petgraph = "0.5.1"
plain = "0.2.3"
predicates = "1.0.5"
predicates-tree = "1.0.0"
priority-queue = "1.0.0"
probability = "0.17.0"
qr2term = "0.2.1"
quote = "1.0.7"
radix_trie = "0.2.0"
rand = "0.7.3"
rand_chacha = "0.2.2"
rand_regex = "0.14.2"
ratelimit_meter = "5.0.0"
reqwest = "0.10.7"
rstar = "0.8.2"
rust_decimal = "1.7.0"
rustacuda = "0.1.2"
rustfft = "3.0.1"
rustls-native-certs = "0.4.0"
serde_urlencoded = "0.6.1"
sharded-slab = "0.0.9"
siphasher = "0.3.3"
sized-chunks = "0.6.2"
slab = "0.4.2"
sled = "0.34.2"
sluice = "0.5.2"
smallvec = "1.4.2"
smol = "0.3.3"
special = "0.8.1"
sqlite = "0.25.3"
stdweb = "0.4.20"
strength_reduce = "0.2.3"
string = "0.2.1"
sublime_fuzzy = "0.6.0"
superslice = "1.0.0"
syn = "1.0.38"
tensorflow = "0.15.0"
tensorflow-serving = "0.1.0"
# tfmicro = "0.1.0"
tfrecord = "0.3.2"
tokio = "0.2.22"
tokio-tungstenite = "0.11.0"
tokio-util = "0.3.1"
tonic = "0.3.0"
tower = "0.3.1"
tower-service = "0.3.0"
tracing = "0.1.19"
tracing-attributes = "0.1.10"
transpose = "0.2.0"
treediff = "4.0.0"
tungstenite = "0.11.1"
twoway = "0.2.1"
url = "2.1.1"
urlencoding = "1.1.1"
uuid = "0.8.1"
vek = "0.12.0"
warp = "0.2.4"
wee_alloc = "0.4.5"
wyhash = "0.4.1"